# freeflux

./: setup.cfg
src/freeflux/analysis/: fit.py  stats.py
src/freeflux/core/: reaction.py
src/freeflux/io/: results.py
src/freeflux/solver/: nlpsolver.py
src/freeflux/utils/: utils.py
tutorials/: test_seed.py
